# mealie-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.snippet.yml  pyproject.toml
.github/workflows/: publish.yml
src/mealie_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py
